--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,6 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 ### Java template
-# Compiled class file
-*.class
 
 # Log file
 *.log
@@ -82,3 +80,41 @@ hs_err_pid*
 *.iml
 /**/target/
 /**/log/
+### Vagrant template
+# General
+.vagrant/
+
+# Log files (if you are creating logs in debug mode, uncomment this)
+# *.logs
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff:
+
+# Sensitive or high-churn files:
+
+# Gradle:
+
+# CMake
+cmake-build-debug/
+
+# Mongo Explorer plugin:
+
+## File-based project format:
+
+## Plugin-specific files:
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+
+# JIRA plugin
+
+# Cursive Clojure plugin
+.idea/replstate.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+# vertx cache
+.vertx
