--- a/rogue-endpoint/pom.xml
+++ b/rogue-endpoint/pom.xml
@@ -52,11 +52,16 @@
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
-          <finalName>${project.artifactId}-${project.version}-all</finalName>
+          <finalName>${project.artifactId}-${project.version}-HTTP-all</finalName>
           <appendAssemblyId>false</appendAssemblyId>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
+          <archive>
+            <manifest>
+              <mainClass>de.marko.pentest.Main</mainClass>
+            </manifest>
+          </archive>
         </configuration>
         <executions>
           <execution>
