--- a/vulnerable-endpoint/pom.xml
+++ b/vulnerable-endpoint/pom.xml
@@ -47,6 +47,22 @@
       <artifactId>groovy-all</artifactId>
       <version>2.5.0-beta-1</version>
     </dependency>
+    <!-- database -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>${org.hibernate.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>${dbcp.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.4.0</version>
+    </dependency>
   </dependencies>
 
   <build>
