--- a/vulnerable-endpoint/pom.xml
+++ b/vulnerable-endpoint/pom.xml
@@ -63,6 +63,11 @@
       <artifactId>hsqldb</artifactId>
       <version>2.4.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.2</version>
+    </dependency>
   </dependencies>
 
   <build>
